--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.61.5",
     "react-native-calendars": "^1.265.0",
     "react-native-gesture-handler": "^1.5.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-safe-area-context": "^0.6.2",
     "react-native-safe-area-view": "^1.0.0",
     "react-native-screens": "^2.0.0-beta.8",
